fixed long-word-overflowing problem in idea cards
git-svn-id: http://svn.localprojects.net/gam2/trunk@1099 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -694,7 +694,7 @@ OTHER GLOBAL ELEMENTS
 .note-card .note-meta-hd, .note-card-splash .note-meta-hd { margin-bottom: 8px; font-style: normal; font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; display: block; }
 .note-card a, .note-card-splash a { color: #3d3a36; }
 .note-card a:hover, .note-card-splash a:hover { text-decoration: underline; }
-.note-card cite, .note-card blockquote { font-size: 16px; line-height: 22px;  }
+.note-card cite, .note-card blockquote { font-size: 16px; line-height: 22px; word-wrap: break-word; overflow: hidden; max-height: 154px;  }
 .note-card-splash em { font-style: normal; }
 .note-card textarea { overflow:hidden; margin-left:15px; width:160px; height:100%; border:0; background-color:transparent; }
 .note-card cite.note-meta-ft, .note-card-splash cite.note-meta-ft { font-size: 10px; line-height: 14px; font-style: italic; }
